# modoboa-installer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  checks.py  pyproject.toml  run.py  tests.py  version.txt
.github/: ISSUE_TEMPLATE.md
docker/: linux_build.sh  python_build.sh  python_start.sh
modoboa_installer/: compatibility_matrix.py  config_dict_template.py  database.py  package.py  python.py  ssl.py  system.py  utils.py
modoboa_installer/scripts/: __init__.py  amavis.py  automx.py  backup.py  base.py  clamav.py  dovecot.py  fail2ban.py  modoboa.py  nginx.py  opendkim.py  postfix.py  postwhite.py  radicale.py  razor.py  restore.py  spamassassin.py  uwsgi.py
modoboa_installer/scripts/files/amavis/conf.d/: 15-content_filter_mode.tpl
modoboa_installer/scripts/files/dovecot/: dovecot-sql-master-mysql.conf.ext.tpl  dovecot-sql-master-postgres.conf.ext.tpl  dovecot-sql-mysql.conf.ext.tpl  dovecot-sql-postgres.conf.ext.tpl  dovecot.conf.tpl
modoboa_installer/scripts/files/dovecot/conf.d/: 10-auth.conf  10-mail.conf  10-master.conf.tpl  10-ssl-keys.try.tpl  10-ssl.conf.tpl  20-imap.conf  20-managesieve.conf
modoboa_installer/scripts/files/opendkim/: opendkim.conf.tpl
modoboa_installer/scripts/files/postfix/: main.cf.tpl  master.cf.tpl
modoboa_installer/scripts/files/radicale/: config.tpl
modoboa_installer/scripts/files/spamassassin/: local.cf.tpl
